Java 8 compatibility fixed, no longer shows Blocks Placed/Broken.